--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+*:focus {
+  outline: none;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -36,4 +40,92 @@ body {
 	position: absolute;
 	top: 0;
 	right: 0;
+	background: url('https://goo.gl/YbktSj');
+	background-size: cover;
+	background-position: center;
+	border-radius: 0 2px 2px 0;	
+}
+
+h1 {
+  margin: 0 0 20px 0;
+  font-weight: 300;
+  font-size: 2em;
+}
+
+input {
+	border: none;
+	border-bottom: 1px solid #AAA;
+	display: block;
+	margin-bottom: 20px;
+	padding: 4px;
+	height: 32px;
+	width: 220px;
+	font-weight: 400;
+}
+
+.sign-up-button{
+	margin-top: 5px;
+	margin-bottom: 5px;
+	background-color: #16A085;
+	transform-text: uppercase;
+	font-weight: 400;
+}
+
+.sign-up-button:hover{
+	opacity: 0.8;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+	transition: 0.1s ease;
+}
+
+.sign-up-button:active{
+	opacity: 1;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+input:focus{
+	border-bottom: 2px solid #16A085;
+	color: #16A085;
+	transition: 0.2s ease;
+}
+
+.loginwith{
+	display: block;
+	margin-bottom: 40px;
+	font-size: 2em;
+	color: #FFF;
+	text-align: center;
+}
+
+button {
+	margin-bottom: 20px;
+	width: 220px;
+	height: 36px;
+	border: none;
+	border-radius: 2px;
+	color: #FFF;
+}
+
+.facebook{
+	background-color: #32508E;
+}
+
+.twitter{
+	background-color: #55ACEE;
+}
+
+.google{
+	background-color: #DD4B39;
+}
+
+.or{
+	position: absolute;
+	top: 180px;
+	left: 280px;
+	width: 40px;
+	height: 40px;
+	background: #DDD;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 40px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
